--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,11 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 		<!-- 스프링 프레임워크 버전 -->
-		<spring-framework.version>4.1.6.RELEASE</spring-framework.version>
+		<spring-framework.version>4.2.2.RELEASE</spring-framework.version>
 		<!-- JPA, 하이버네이트 버전 -->
 		<hibernate.version>4.3.10.Final</hibernate.version>
+		<!-- 스프링 시큐리티 버전 -->
+		<spring-security.version>4.0.3.RELEASE</spring-security.version>
 		<!-- 데이터베이스 버전 -->
 		<tomcat-jdbc.version>7.0.57</tomcat-jdbc.version>
 		<h2db.version>1.4.187</h2db.version>
@@ -46,6 +48,19 @@
 			<artifactId>spring-orm</artifactId>
 			<version>${spring-framework.version}</version>
 		</dependency>
+
+		<!-- 스프링 시큐리티 -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${spring-security.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${spring-security.version}</version>
+		</dependency>
+
 
 		<!-- JPA, 하이버네이트 -->
 		<dependency>
